# zbot

./: .adapt-discovery.toml  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  LOGGING.md  Makefile  README.md  SECURITY.md  deny.toml  error.txt  eval-report-planner-glm51.md  eval-report-planner-nemotron.md  eval-report-planner-summary.md  eval-report-planner.md  eval-report-zai-glm-5-turbo.md  eval-report-zai-glm-5.1.md  eval-report-zai-glm-5.md  eval-report.md  index.html  issues.md  learnings.md  log.txt  package-lock.json  package.json  pending.md  pnpm-lock.yaml  pyrightconfig.json  sonar-project.properties  sonar_fix_report.md  temp_query.py  vite.config.ts
application/agent-runtime/: AGENTS.md  Cargo.toml  README.md
application/agent-runtime/src/: executor.rs  lib.rs  llm.rs  tools.rs
application/agent-runtime/tests/: adk_evaluation.rs
application/agent-tools/: AGENTS.md  Cargo.toml
application/agent-tools/src/: lib.rs
application/daily-sessions/: Cargo.toml
application/daily-sessions/src/: cache.rs  lib.rs  manager.rs  repository.rs  types.rs
application/search-index/: Cargo.toml
application/search-index/src/: manager.rs  schema.rs  types.rs
application/session-archive/: Cargo.toml
application/session-archive/src/: error.rs  manager.rs  reader.rs  schema.rs  writer.rs
application/workflow-executor/: Cargo.toml
application/workflow-executor/src/: builder.rs  config.rs  error.rs  executor.rs  graph.rs  lib.rs  loader.rs
apps/cli/: AGENTS.md  Cargo.toml  README.md  build.rs
apps/cli/src/: app.rs  client.rs  config.rs  events.rs  main.rs  oneshot.rs  render.rs  repl.rs  slash.rs  stream.rs  style.rs  theme.rs  ui.rs
apps/daemon/: AGENTS.md  Cargo.toml  build.rs
apps/daemon/src/: main.rs
crates/zero-app/: Cargo.toml
crates/zero-tool/: Cargo.toml
crates/zero-tool/src/: context_impl.rs  lib.rs
crates/zerotools/: Cargo.toml
crates/zerotools/src/: lib.rs
discovery/: AGENTS.md  Cargo.toml
discovery/src/: advertiser.rs  config.rs  interfaces.rs  lib.rs  mdns.rs  network_info.rs
discovery/tests/: mdns_integration.rs
framework/zero-agent/: AGENTS.md  Cargo.toml
framework/zero-agent/src/: lib.rs  llm_agent.rs
framework/zero-core/: AGENTS.md  Cargo.toml
framework/zero-core/src/: agent.rs  callbacks.rs  capability.rs  context.rs  error.rs  event.rs  filesystem.rs  lib.rs  memory.rs  multimodal.rs  policy.rs  registry.rs  tool.rs  types.rs
framework/zero-llm/: AGENTS.md  Cargo.toml
framework/zero-llm/src/: config.rs  encoding.rs  lib.rs  llm.rs  openai.rs  openai_encoder.rs
framework/zero-llm/tests/: multimodal_integration.rs
framework/zero-mcp/: AGENTS.md  Cargo.toml
framework/zero-mcp/src/: client.rs  config.rs  connection.rs  error.rs  filter.rs  lib.rs  schema.rs  tool.rs  toolset.rs
framework/zero-middleware/: AGENTS.md  Cargo.toml
framework/zero-middleware/src/: config.rs  context_editing.rs  lib.rs  pipeline.rs  summarization.rs  token_counter.rs  traits.rs
framework/zero-prompt/: AGENTS.md  Cargo.toml
framework/zero-prompt/src/: error.rs  lib.rs  template.rs
framework/zero-session/: AGENTS.md  Cargo.toml
framework/zero-session/src/: lib.rs  service.rs  session.rs  state.rs
gateway/: AGENTS.md  Cargo.toml  README.md  build.rs
gateway/examples/: query_session.rs  rig_parity_event_capture.rs
gateway/gateway-bridge/: AGENTS.md  Cargo.toml
gateway/gateway-bridge/src/: error.rs  handler.rs  lib.rs  outbox.rs  pending_requests.rs  plugin_config.rs  plugin_manager.rs  protocol.rs  provider.rs  push.rs  registry.rs  stdio_plugin.rs
gateway/gateway-bus/: AGENTS.md  Cargo.toml
gateway/gateway-bus/src/: lib.rs  types.rs
gateway/gateway-connectors/: AGENTS.md  Cargo.toml
gateway/gateway-connectors/src/: config.rs  dispatch.rs  inbound.rs  lib.rs  service.rs
gateway/gateway-cron/: AGENTS.md  Cargo.toml
gateway/gateway-cron/src/: config.rs  lib.rs  service.rs
gateway/gateway-database/: Cargo.toml
gateway/gateway-database/migrations/: v24_global_scope_backfill.sql
gateway/gateway-database/src/: auxiliary_stores.rs  compaction_repository.rs  connection.rs  distillation_repository.rs  episode_repository.rs  goal_repository.rs  kg_episode_repository.rs  knowledge_db.rs  knowledge_schema.rs  lib.rs  memory_fact_store.rs  memory_repository.rs  procedure_repository.rs  procedure_store.rs  recall_log_repository.rs  repository.rs  schema.rs  vector_index.rs  wiki_repository.rs  wiki_store.rs
gateway/gateway-database/tests/: vector_index.rs
gateway/gateway-events/: AGENTS.md  Cargo.toml
gateway/gateway-events/src/: broadcast.rs  context.rs  lib.rs
gateway/gateway-execution/: AGENTS.md  Cargo.toml
gateway/gateway-execution/src/: archiver.rs  artifacts.rs  composite_provider.rs  (+16 more)
gateway/gateway-hooks/: AGENTS.md  Cargo.toml
gateway/gateway-memory/: Cargo.toml
gateway/gateway-services/: AGENTS.md  Cargo.toml
gateway/gateway-templates/: AGENTS.md  Cargo.toml
gateway/gateway-ws-protocol/: AGENTS.md  Cargo.toml
gateway/src/: config.rs  error.rs  lib.rs  memory_llm_factory.rs  parity.rs  server.rs  state.rs  templates.rs  test_utils.rs
gateway/templates/: chat_instructions.md  default_agents.json  default_cron.json  default_mcps.json  default_policies.json  distillation_prompt.md  instructions_starter.md  models_registry.json  os_linux.md  os_macos.md  os_windows.md  soul_starter.md  system_prompt.md
gateway/tests/: api_tests.rs  memory_search_handler.rs  memory_unified_search.rs  vault_endpoint.rs  ward_content_endpoint.rs
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  test-time-report.html
src-tauri/scripts/: transcribe.py
src-tauri/src/: audio_recorder.rs  lib.rs  main.rs  settings.rs  transcription.rs
src-tauri/templates/: system_prompt.md
zero-stores/: Cargo.toml
zero-stores-sqlite/: Cargo.toml
zero-stores-sqlite/src/: blocking.rs  knowledge_graph.rs
zero-stores-sqlite/tests/: conformance.rs  maintenance.rs  read_paths.rs
zero-stores/src/: error.rs  extracted.rs  knowledge_graph.rs  lib.rs  types.rs
(+2160 files in other folders)
