# ============================================================================
# AGENT ZERO - CARGO WORKSPACE
# ============================================================================

[workspace]
resolver = "2"
members = [
    # Zero Framework crates
    "crates/zero-core",
    "crates/zero-llm",
    "crates/zero-tool",
    "crates/zero-session",
    "crates/zero-agent",
    "crates/zero-mcp",
    "crates/zero-prompt",
    "crates/zero-middleware",
    "crates/zero-app",
    # Application crates
    "application/api-logs",
    "application/agent-runtime",
    "application/agent-tools",
    "application/daily-sessions",
    "application/search-index",
    "application/session-archive",
    "application/knowledge-graph",
    "application/gateway",
    "application/daemon",
    "application/zero-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["agentzero"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
rust-embed = { version = "8", features = ["debug-embed"] }
lazy_static = "1.5"
base64 = "0.22"
once_cell = "1.21"
