# ============================================================================
# AGENT ZERO - CARGO WORKSPACE
# ============================================================================

[workspace]
resolver = "2"
members = [
    # Framework - Core abstractions (publishable as zero-agent-framework)
    "framework/zero-core",
    "framework/zero-llm",
    "framework/zero-tool",
    "framework/zero-session",
    "framework/zero-agent",
    "framework/zero-mcp",
    "framework/zero-prompt",
    "framework/zero-middleware",
    "framework/zero-app",

    # Runtime - Execution engine
    "runtime/agent-runtime",
    "runtime/agent-tools",

    # Services - Standalone data services
    "services/api-logs",
    "services/daily-sessions",
    "services/execution-state",
    "services/knowledge-graph",

    # Gateway - Network layer
    "gateway",

    # Apps - Runnable applications
    "apps/daemon",
    "apps/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["agentzero"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
rust-embed = { version = "8", features = ["debug-embed"] }
lazy_static = "1.5"
base64 = "0.22"
once_cell = "1.21"
