# ============================================================================
# GATEWAY LIBRARY
# HTTP and WebSocket APIs for the agent runtime
# ============================================================================

[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP and WebSocket gateway for AgentZero daemon"
repository = "https://github.com/yourusername/agentzero"
readme = "README.md"
keywords = ["ai", "agent", "gateway", "websocket", "api"]
categories = ["web-programming"]

[dependencies]
# Internal crates
api-logs = { path = "../services/api-logs" }
execution-state = { path = "../services/execution-state" }
knowledge-graph = { path = "../services/knowledge-graph" }
agent-runtime = { path = "../runtime/agent-runtime" }
agent-tools = { path = "../runtime/agent-tools" }
zero-core = { path = "../framework/zero-core" }
zero-app = { path = "../framework/zero-app" }
gateway-events = { path = "gateway-events" }
gateway-database = { path = "gateway-database" }
gateway-templates = { path = "gateway-templates" }
gateway-connectors = { path = "gateway-connectors" }
gateway-services = { path = "gateway-services" }
gateway-execution = { path = "gateway-execution" }
gateway-hooks = { path = "gateway-hooks" }
gateway-cron = { path = "gateway-cron" }
gateway-bus = { path = "gateway-bus" }
gateway-ws-protocol = { path = "gateway-ws-protocol" }
gateway-bridge = { path = "gateway-bridge" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

# WebSocket
tokio-tungstenite = "0.24"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
dirs = "5"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = { workspace = true }
sha2 = "0.10"

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_matches = "1.5"
tower = { version = "0.5", features = ["util"] }
axum-test = "16"

[features]
default = []

[lib]
name = "gateway"
path = "src/lib.rs"

[lints]
workspace = true
