# ============================================================================
# GATEWAY LIBRARY
# HTTP and WebSocket APIs for the agent runtime
# ============================================================================

[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP and WebSocket gateway for AgentZero daemon"
repository = "https://github.com/yourusername/agentzero"
readme = "README.md"
keywords = ["ai", "agent", "gateway", "websocket", "api"]
categories = ["web-programming"]

[features]
rig-parity-capture = []

[dependencies]
# Internal crates
api-logs = { path = "../services/api-logs" }
execution-state = { path = "../services/execution-state" }
knowledge-graph = { path = "../services/knowledge-graph" }
agent-runtime = { path = "../runtime/agent-runtime" }
agent-tools = { path = "../runtime/agent-tools" }
agent-primitives = { path = "../runtime/agent-primitives" }
zbot-stores = { path = "../stores/zbot-stores" }
zbot-stores-domain = { path = "../stores/zbot-stores-domain" }
zbot-stores-traits = { path = "../stores/zbot-stores-traits" }
zbot-stores-sqlite = { path = "../stores/zbot-stores-sqlite" }
gateway-events = { path = "gateway-events" }
gateway-templates = { path = "gateway-templates" }
gateway-connectors = { path = "gateway-connectors" }
gateway-services = { path = "gateway-services" }
gateway-execution = { path = "gateway-execution" }
gateway-memory = { path = "gateway-memory" }
gateway-hooks = { path = "gateway-hooks" }
gateway-cron = { path = "gateway-cron" }
gateway-bus = { path = "gateway-bus" }
gateway-ws-protocol = { path = "gateway-ws-protocol" }
gateway-bridge = { path = "gateway-bridge" }
discovery = { path = "../discovery" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

# WebSocket
tokio-tungstenite = "0.24"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
dirs = "5"
gethostname = { workspace = true }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = { workspace = true }
sha2 = "0.10"

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Database — D9: gateway no longer depends on rusqlite/r2d2 directly.
# All SQLite-coupled types come through `zbot-stores-sqlite` (the trait
# implementation) and `zbot-stores-traits` (the abstract surface). New
# backends drop in by implementing the same traits in their own crate.

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
# Used only by the `query_session` debug example. The lib + bin do not
# depend on rusqlite directly — all SQLite access flows through
# `zbot-stores-sqlite` (the trait impl) per the D-phase architecture.
rusqlite = { version = "0.32", features = ["bundled"] }
assert_matches = "1.5"
tower = { version = "0.5", features = ["util"] }
axum-test = "16"

[lib]
name = "gateway"
path = "src/lib.rs"

[[example]]
name = "rig_parity_event_capture"
path = "examples/rig_parity_event_capture.rs"
required-features = ["rig-parity-capture"]

[lints]
workspace = true
