[package]
name = "agentzero-temp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agentzero_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
lazy_static = { workspace = true }
rust-embed = { workspace = true }

# Tauri dependencies
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
dirs = "5"
base64 = "0.22"

# Utilities
once_cell = "1.19"

# Internal application crates
agent-runtime = { path = "../application/agent-runtime" }
agent-tools = { path = "../application/agent-tools" }

# Zero framework integration
zero-app = { path = "../crates/zero-app" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

