# ============================================================================
# AGENT RUNTIME LIBRARY
# Reusable agent execution framework
# ============================================================================

[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A modular AI agent execution framework with MCP support"
repository = "https://github.com/yourusername/agentzero"
readme = "README.md"
keywords = ["ai", "agent", "llm", "mcp", "framework"]
categories = ["development-tools"]

[dependencies]
# Internal crates
zero-core = { path = "../../crates/zero-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
rust-embed = { workspace = true }
lazy_static = { workspace = true }
base64 = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

# NOTE: ADK-Rust evaluation completed - decision: DO NOT MIGRATE
# See: tests/adk_evaluation.rs and adkrust-migration.md for details
# adk-core = "0.2"  # Uncomment only if re-evaluating in future

[features]
default = []
# Enable Tauri-specific integrations (only when used from Tauri app)
tauri = []
# ADK-Rust evaluation feature - uncomment adk-core in dev-dependencies to use
adk-eval = []

[lib]
name = "agent_runtime"
path = "src/lib.rs"
