[package]
name = "agent-tools"
version = "0.1.0"
edition = "2024"
description = "Built-in tools for the agentzero application"
license = "MIT"

[dependencies]
zero-core = { path = "../../crates/zero-core" }
knowledge-graph = { path = "../knowledge-graph" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
glob = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["process", "time"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
tracing = "0.1"
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
