[package]
name = "daily-sessions"
version.workspace = true
edition.workspace = true

[dependencies]
zero-core = { path = "../../crates/zero-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
async-trait = { workspace = true }
