[package]
name = "session-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parquet for columnar storage
parquet = "53.3"
# Arrow for in-memory data representation
arrow = "53.3"
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Date handling
chrono = { version = "0.4", features = ["serde"] }
# Error handling
thiserror = "2"
# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
