# ============================================================================
# CLI: `zbot` — lightweight streaming Claude-Code-style chat for the daemon
# ============================================================================

[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "z-Bot lightweight CLI (streaming chat, slash commands, daemon client)"

[[bin]]
name = "zbot"
path = "src/main.rs"

[dependencies]
# Readline-style input editing (history, arrow keys, multi-line)
rustyline = { version = "14", default-features = false, features = ["with-file-history", "derive"] }

# Shared WS protocol types — keeps the CLI in lock-step with the daemon
gateway-ws-protocol = { path = "../../gateway/gateway-ws-protocol" }

# Async runtime + I/O
tokio = { workspace = true }
futures-util = "0.3"

# HTTP + WebSocket clients
reqwest = { workspace = true }
tokio-tungstenite = "0.24"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
dirs = "5"
toml = "0.8"

[lints]
workspace = true
