[package]
name = "zero-app"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core framework
zero-core = { path = "../zero-core" }
zero-llm = { path = "../zero-llm" }
zero-tool = { path = "../zero-tool" }
zero-session = { path = "../zero-session" }
zero-agent = { path = "../zero-agent" }
zero-mcp = { path = "../zero-mcp" }

# Additional modules
zero-prompt = { path = "../zero-prompt" }
zero-middleware = { path = "../zero-middleware" }

# Async runtime
tokio = { version = "1", features = ["sync", "rt"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
