[package]
name = "zerotools"
version = "0.1.0"
edition = "2024"
description = "Built-in tools for agent-runtime"
license = "MIT"

[dependencies]
agent-runtime = { path = "../agent-runtime" }

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
glob = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["process"] }
tracing = "0.1"
thiserror = "2.0"
