[package]
name = "zero-mcp"
version.workspace = true
edition.workspace = true
authors = ["agentzero"]
license = "MIT"

[dependencies]
# Core
zero-core = { path = "../zero-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client (for MCP over HTTP)
reqwest = { workspace = true }

# MCP SDK
rmcp = { version = "0.2", features = ["client"] }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }
