[package]
name = "zero-middleware"
version.workspace = true
edition.workspace = true
authors = ["agentzero"]
license = "MIT"
description = "Re-export facade for the canonical agent_runtime::middleware implementation."

[dependencies]
agent-runtime = { path = "../../runtime/agent-runtime" }

[lints]
workspace = true
