[package]
name = "zero-prompt"
version.workspace = true
edition.workspace = true
authors = ["agentzero"]
license = "MIT"

[dependencies]
# Core
zero-core = { path = "../zero-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
regex = "1.11"

[lints]
workspace = true
