[package]
name = "zero-session"
version.workspace = true
edition.workspace = true
authors = ["agentzero"]
license = "MIT"

[dependencies]
# Core
zero-core = { path = "../zero-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true
