# ============================================================================
# GATEWAY BRIDGE
# WebSocket worker system for bidirectional agent-worker communication
# ============================================================================

[package]
name = "gateway-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebSocket bridge for AgentZero worker connections"

[dependencies]
# Internal crates
zbot-stores-sqlite = { path = "../../stores/zbot-stores-sqlite" }
gateway-bus = { path = "../gateway-bus" }
agent-primitives = { path = "../../runtime/agent-primitives" }
zbot-stores-traits = { path = "../../stores/zbot-stores-traits" }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
gateway-services = { path = "../gateway-services" }
tokio-test = "0.4"
tempfile = "3"

[lints]
workspace = true
