# ============================================================================
# GATEWAY-BUS: Unified intake interface types and trait
# ============================================================================

[package]
name = "gateway-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GatewayBus trait and types for AgentZero session management"

[dependencies]
# Internal crates
execution-state = { path = "../../services/execution-state" }

# Async
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
