# ============================================================================
# GATEWAY CONNECTORS
# External connector management for bidirectional messaging
# ============================================================================

[package]
name = "gateway-connectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "External connector management for AgentZero gateway"

[dependencies]
gateway-services = { path = "../gateway-services" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
